--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 streamlit
-google-generativeai
-python-dotenv
+google-generativeai==0.3.2
+python-dotenv==1.0.0
 werkzeug
-flask
-PyPDF2
-langchain
+flask==3.0.0
+flask-cors==4.0.0
+PyPDF2==3.0.1
+langchain==0.1.0
 chromadb
-faiss-cpu
-langchain_google_genai
+faiss-cpu==1.7.4
+langchain_google_genai==0.0.5
 regex
-langchain-community
+langchain-community==0.0.13
